Update and rename Накидки на сидіння для тварин.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ru-RU"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <script src="./Накидки на сидіння для тварин_files/771920888115418" async=""></script><script async="" src="./Накидки на сидіння для тварин_files/fbevents.js.завантаження"></script><script src="./Накидки на сидіння для тварин_files/jquery.min.js.завантаження"></script>
-<title>Накидки на сидіння для тварин</title>
+<title>Накидки на сидіння </title>
 	
 	<meta name="viewport" content="width=480">
 	<meta name="description" content="">
