--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ src="https://www.facebook.com/tr?id=771920888115418&ev=PageView&noscript=1"
 			<br>
 			<div class="price clearfix">
 				<div class="old">
-					Стара ціна(комплект):
+					Стара ціна:
 					<p><span> 3599</span><small>грн  </small></p>
 				</div>
 
 				<div class="new">
-					Ціна сьогодні(комплект):
+					Ціна сьогодні:
 					<p><span><small>до</small> - 1799</span><small>грн  </small> </p>
 				</div>
 			</div>
@@ -60,9 +60,9 @@ src="https://www.facebook.com/tr?id=771920888115418&ev=PageView&noscript=1"
 			
 			
 			<ul class="ofr_bull">
-				<li><p>водонепроникні</p></li>
-				<li style="width: 150px;"><p>довговічні</p></li>
-				<li><p>естетичні та комфортні</p></li>
+				<li><p>вологозахисні</p></li>
+				<li style="width: 150px;"><p>естетичні</p></li>
+				<li><p>довговічні та комфортні</p></li>
 			</ul>
 			<div class="difference">Встигни зекономити <span>50%</span></div>
 			<div class="timer">
@@ -196,12 +196,12 @@ src="https://www.facebook.com/tr?id=771920888115418&ev=PageView&noscript=1"
 				</div>
 				<div class="price clearfix">
 				<div class="old">
-					Стара ціна(комплект):
+					Стара ціна:
 					<p><span>3599</span><small>грн</small></p>
 				</div>
 
 				<div class="new">
-					Ціна Сьогодні(комплект):
+					Ціна Сьогодні:
 					<p><span><small>до</small>-1799</span><small>грн</small></p>
 				</div>
 			</div>
