--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ src="https://www.facebook.com/tr?id=771920888115418&ev=PageView&noscript=1"
 			
 			<ul class="ofr_bull">
 				<li><p>вологозахисні</p></li>
-				<li style="width: 150px;"><p>естетичні</p></li>
-				<li><p>довговічні та комфортні</p></li>
+				<li style="width: 150px;"><p>естетичні та комфортні</p></li>
+				<li><p>довговічні </p></li>
 			</ul>
 			<div class="difference">Встигни зекономити <span>50%</span></div>
 			<div class="timer">
