--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ src="https://www.facebook.com/tr?id=771920888115418&ev=PageView&noscript=1"
 				<div class="formbox">
 					<div class="action_text">
 						<span>ЗАЛИШАЙТЕ ЗАМОВЛЕННЯ 
-							купуй для себе або у подарунок! <b></b>
+							<small>купуй для себе або у подарунок!</small> <b></b>
 					</span></div>
 
 
