--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ src="https://www.facebook.com/tr?id=771920888115418&ev=PageView&noscript=1"
 				</div>
 				<div class="formbox">
 					<div class="action_text">
-						<span>ЗАЛИШАЙТЕ ЗАМОВЛЕННЯ 
+						<span> 
 							<small>купуй для себе або у подарунок!</small> <b></b>
 					</span></div>
 
