--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ src="https://www.facebook.com/tr?id=1149591162796143&ev=PageView&noscript=1"
 				
 				<ul class="color_list">
 					<li>
-							<p style="font-size: 150%;">Розмір - 147х137см </p>
+							<p style="font-size: 150%;"></p>
 							<div class="img">
 				<div class="img">
 					<img src="./Накидки на сидіння для тварин_files/78.jpg" alt="">
